--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,7 @@ dependencies:
     sdk: flutter
 
   window_manager: ^0.2.5
-  page_transition: ^2.0.9
   provider: ^6.0.3
-  dropdown_button2: ^1.6.3
 
 dev_dependencies:
   flutter_test:
@@ -43,8 +41,13 @@ flutter:
   assets:
     - assets/alevel.json
     - assets/igcse.json
+    - assets/appicon.png
   
   fonts:
+    - family: JetBrains Mono
+      fonts:
+        - asset: fonts/JetBrainsMono-Regular.ttf
+          weight: 400
     - family: Inter
       fonts:
         - asset: assets/fonts/Inter-Thin.otf
