--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   window_manager: ^0.2.5
   provider: ^6.0.3
   url_launcher: ^6.1.5
+  dio: ^4.0.6
+  path_provider: ^2.0.11
+  file_picker: ^5.0.1
 
 dev_dependencies:
   flutter_test:
