--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio: ^4.0.6
   path_provider: ^2.0.11
   file_picker: ^5.0.1
+  loggy: ^2.0.1+1
 
 dev_dependencies:
   flutter_test:
