feat(download): add hint for no download path
  - Adds hint when download button is pressed if the download path is not specified.
  - Changes sponsor method to PayPal, WeChat Pay and Alipay.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/alevel.json
-    - assets/igcse.json
-    - assets/appicon.png
+    - assets/
 
   fonts:
     - family: JetBrains Mono
