--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = past_paper
+PRODUCT_NAME = Past Paper Finder
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.pastPaper
+PRODUCT_BUNDLE_IDENTIFIER = com.micfong.pastpaperfinder
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 Micfong. All rights reserved.
