--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: past_paper
-description: A new Flutter project.
+description: Just another past paper crawler.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.7.2+15
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -52,9 +52,6 @@ flutter:
     - assets/
 
   fonts:
-    - family: Source Han Sans
-      fonts:
-        - asset: assets/fonts/SourceHanSansSC-VF.otf
     - family: JetBrains Mono
       fonts:
         - asset: assets/fonts/JetBrainsMono-Regular.ttf
